assets/css/style.css
/*Universal selector - setting margins and padding to 0*/
* {
    margin:0px;
    padding:0px;
}

/*Creating color variables*/
:root {
    --primary: rgb(82, 81, 81);
    --secondary: rgb(228, 228, 228);
    --tertiary: white;
    --pop: red;
}

/*Setting the font for the body*/
body {
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    background-color:var(--secondary);
}

/*Header styles*/
.background-image {
 background-image: url("../images/multi_dim_image.jpg");
 background-size: cover;
 background-position: center;
 width: 100%;
 height: 350px;
}

/*Hide DIV with aria-label inside so it doesn't take up space in layout*/
/*DIDN'T HAVE INTENDED PURPOSE.  ASK TUTOR*/
.hide {
    display:hidden;
}

.header-container {
    /*turn header into flexbox*/
    display: flex;
    flex-flow: column;
    justify-content:space-evenly;
    align-items:flex-end;
 } 

    /*formatting items within the header flex-box*/
.name h1{
    color:var(--pop);
    font-size:4em;
    margin-right: 1vw;
}

.catch-phrase {
    text-align: center;
}

.catch-phrase h2, h3 {
    color:var(--primary);
    font-size:1.5em;
    margin-right:1vw;
}

.catch-phrase h3 {
    font-size:1em;
}
    /*Turning nav-ul into a flex box*/
.nav-container ul {
    display: flex;
}
.nav-container li {
    list-style-type: none;
    display: inline-block;
    margin-right:1vw;
    font-size: 1em;
    font-weight: bold;
}

.nav-container a {
    /*setting up transition appearance*/
    background-repeat: no-repeat;
    background-image: linear-gradient(180deg, var(--pop) 0%, var(--pop) 100%);
    background-position: bottom;
    background-size: 100% 0.1em;
    /*formatting anchor text*/
    text-decoration: none;
    color: var(--primary);
    font-size: 150%;

}
    /*Adding transition when links are hovered over*/
.nav-container a:hover {
    transition: all 0.25s ease-in;
    background-size: 100% 100%;
    color: var(--tertiary);
}


/*Main container styles - outer wrapper of About Me, Work, and Contact Me sections*/
.main-container {
    display:flex;
    flex-direction:column;
    justify-content: space-evenly;

    height:auto;
    margin-right: 2.5%;
    margin-left: 2.5%;
}

.main-container h2 {
    width: 20%;
    padding-right: 2%;
    text-align:right;

}

.main-container .aboutme-info-container,
.main-container .projects,
.main-container address {
    width:75%;
    height:auto;
    padding-top: 1%;
    padding-right: 0%;
    padding-bottom: 1%;
    padding-left:2%;
}

/*Main-sections - styles for each section within the main wrapper*/
.aboutme-container,
.work-container,
.contactme-container {
    width:100%;
    display:flex;
    flex-flow: row wrap;
    margin-top:10px;
    margin-bottom:15px;
}

.aboutme-container h2,
.work-container h2,
.contactme-container h2 {
    color:var(--primary);
    font-size:2.5em;
    border-right: 2px double var(--pop);
}

/*Styles specific to the AboutMe section*/
.aboutme-container .aboutme-info-container {
    display: flex;
    color: var(--primary);
    margin-left: 1%;
    margin-top: 1%;
    margin-bottom:1%;
    padding-left: 2.5%;
}

.aboutme-headshot {
    width:100px;
    height:100px;
    display: inline;
    float:inline-start;
    border-radius: 25px;
    border: 5px solid var(--primary);
    margin: auto 2% auto 2%;
}

.aboutme-info-container p {
    text-align: justify;

}

/*Styles specific to Projects section*/
/*setting flex properties for project wrapper*/
.projects {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items:center;
    align-content: center;

    flex:50%;
    margin-right:1%;
}
    /*setting shared project anchor properties*/
.projects a {
    text-decoration: none;
    display:block;
    border-radius: 25px;
    border: 5px solid var(--primary);
    margin: 2%;
    /*Creates shadow effect on inside of box: x-offset, y-offset, spread, color*/
    box-shadow: inset 60px 60px 120px var(--primary);
    background-blend-mode: soft-light;
 }

 .projects a:hover {
     transition: all, 3s, ease-in;
     background-color:var(--secondary);
 }
    /*setting size of first project image to be the largest*/
 .projects a:first-child {
    flex: 0 0 96%;
    height: 300px;  
 }
    /*setting size of project images 2-5*/
 .projects a:nth-child(n+2) {
    flex: 0 0 46%;
    height: 150px;
 }

.projects #work1 {
    background-image: url("../images/project1_movie-drink_matchmaker_resized.png");  
    background-size: cover;
}

.projects #work2 {
    background-image: url("../images/Code_Quiz_resized.png");
    background-size: cover;
}

.projects #work3 {
    background-image: url("../images/Weather_Dashboard_resized.png");
    background-size: cover;
}

.projects #work4 {
    background-image: url("../images/workday_scheduler_resized.png");
    background-size: cover;

}

.projects #work5 {
    background-image: url("../images/python_resized.png");
    background-size: cover;
}

    /*setting h2 properties shared by all applications 1-5*/
.projects h2 {
    display:inline-block;
    border-right: 3px solid var(--primary);
    border-top:3px solid var(--primary);
    border-bottom:3px solid var(--primary);
    background-color: var(--tertiary);
    color: var(--primary);
    text-decoration: none;
    padding-top: 2%;
    padding-bottom: 2%;
    font-size:1em;
}
    /*setting h2 displayed on first application*/
.projects a:first-child h2 {
    border-top-right-radius:10px;
    border-bottom-right-radius:10px;
    position: relative;
    top:175px;
    width:150px;
}
    /*setting h2 displayed on applications 2-5*/
.projects a:nth-child(n+2) h2 {
    border-top-right-radius:10px;
    border-bottom-right-radius:10px;
    position: relative;
    top:65px;
    width:100px;
}


/*Styles specific to ContactMe wrapper*/
.contactinfo-container {
    display: flex;
    flex-direction: column;
    justify-content:center;
}

.contactinfo-container ul{
    display: flex;
    justify-content:space-evenly;
}

.contactinfo-container li {
    list-style-type:none;
    display:inline-block;
    align-items: center;
    align-content:center;
}
    
.contactinfo-container a {
    background-repeat: no-repeat;
    background-image: linear-gradient( var(--pop) 0%, var(--pop) 100%);
    background-position: bottom;
    background-size: 100% 0.1em;

    text-decoration:none;
    color: var(--primary);
    font-size: 150%;
}
    /*Setting anchor transition for contact information*/
.contactinfo-container a:hover {
    transition: all 0.25s ease-in;
    background-size: 100% 100%;
    color: var(--tertiary);
}



/*Changes to layout when screen size is between 576px and 992px*/
@media screen and (max-width: 992px) {
    /*Changing header display*/
    .header-container {
        justify-content:space-around;
    }
    /*Changing name display*/ 
    .name {
         width:100%;
         background:var(--pop);

     }
     .name h1 {
         text-align:center;
          color: var(--primary) 
     }
     /*Changing catch-phrase display*/
     .catch-phrase {
         width:100%;
         background:var(--secondary);
     }

     .catch-phrase {
         text-align: center;
     }
     /*Changing navigation display*/
     .nav-container {
         width:100%;
         background:var(--tertiary);
     }

     .nav-container ul{
         justify-content: center;
     } 

    /*Changing AboutMe, Work, Contact Me to display as column*/
    .aboutme-container,
    .contactme-container,
    .work-container {
        flex-direction: column;
        align-items:center;
        align-content:center;
    }
    /*Changing appearance of items insdide AboutMe, Work, and Contact Me*/
    .aboutme-container h2,
    .contactme-container h2,
    .work-container h2 {
        width:100%;
        background-color: var(--primary);
        color:var(--tertiary);
        text-align:center;
        border:none;
        padding:0;
    }

    .aboutme-container .aboutme-info-container {
        width:auto;
        padding:1%;
    }

    /*Additoinal modifications for Projects Container*/
    .main-container .projects {
        width: 100%;
        margin-left:2%;
        padding: 1%;


    }
    .work-container .projects h2 {
        border-right: 3px solid var(--primary);
        border-top:3px solid var(--primary);
        border-bottom:3px solid var(--primary);
        background-color: var(--tertiary);
        color: var(--primary);
        text-decoration: none;
        font-size:1.5em;
    }
       
    /*Additional modifications for Contact Me Container*/
    .contactme-container .contactinfo-container {
        width: 100%;
        padding: 0%;
    }

    .contactinfo-container ul{
        flex-direction:column;
        align-items: center;
        line-height: 200%;
    }

    .contactinfo-container a {
        color: var(--pop);
    }


}

/*Changes to layout when screen size is less than or equal to 576px*/
@media screen and (max-width:576px) {
    /*Changing nav-ul flex direction to column*/
    .nav-container ul {
        flex-direction: column;
        align-items: center;
        border-top: 2px ridge var(--pop);
        border-bottom: 2px ridge var(--pop);
    }
    .nav-container li {
        border: none;
        line-height: 200%;    
    }

    /*Changing About Me Information to display vertical*/
    .aboutme-info-container {
        flex-direction: column;
        align-items: center;
    }

    /*Changing Projects container to display 100% of width*/
    .main-container .projects {
        width:100%;
    }
    /*Changing Work Images (2-5) to display 100% of width*/
    .projects a:nth-child(n+2) {
        flex:0 0 96%;
    }
}

